--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97bc55eb59fb47ab8ffd03062057a5a6",
+       "model_id": "f424f8e2df924e749b58ccb622f8f19e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38bc8db7daed45c088eb11803d645f88",
+       "model_id": "e2d055d70c564f7a9b06ed0cdb714b9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35c3c5742b2945f0970ddf132e913a03",
+       "model_id": "98251c2bd25b4068a09b7e7d62eea032",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f75aa39db191450894647e363a04d188",
+       "model_id": "cf7cce9e0b3045f594f179ec4a1bfade",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,23 +140,25 @@
     "\n",
     "## \n",
     "wished_values = ['As', 'Zs', \n",
-    "                 'Gamma_vD', 'Gamma_vE', 'Gamma_vEn0', 'Gamma_vEndiff0', \n",
-    "                 'Isq',# 'I', 'delta_n_avg', \n",
-    "                 'vorticity', 'P',\n",
+    "                 'Gamma_vD', 'Gamma_vE',\n",
+    "                 'Isq','dIdr', 'dIsqdr', # 'I', 'delta_n_avg', \n",
     "                 'n', 'dndr', 'dndt','T', 'dTdr', 'Pperp', #'Ppar',\n",
-    "                 'Ptransfert', 'Ptransfert_approx', 'Ptransfert_vD', 'Ptransfert_vE', \n",
-    "                 'RSphi', 'RSphi_vD', 'RSphi_vE', 'RSphi_vEn0', 'dRSphi_vDdr', 'dRSphi_vEdr', 'dRSphidr', \n",
-    "                 'RSpol', 'RSpol_vD', 'RSpol_vE', 'RSpol_vEn0', 'dRSpol_vDdr', 'dRSpol_vEdr', 'dRSpoldr', \n",
+    "                 'RSpol', 'RSpol_vD', 'RSpol_vE', 'dRSpol_vDdr', 'dRSpol_vEdr', 'dRSpoldr', \n",
     "                 'VP', 'dVPdr', 'VT', 'dVTdr', 'Phi00', 'Er', 'dErdt', 'dErdr', \n",
-    "                 'dIdr', 'dIsqdr', \n",
     "                 'nu_i', 'nustar', \n",
-    "                 'rho', 'time', 'q', 'rg', 'eps']\n",
+    "                 'rho', 'time', 'q', 'rg']\n",
     "\n",
     "untreated_values = ['vorticity1', 'vorticity2', 'dvorticity1dt', 'dvorticity2dt', 'dvorticitydt', 'P1', 'P2', 'dP1dt', 'dP2dt', 'dPdt',\n",
     "                    'spreading_0deg', 'spreading_180deg', 'spreading_270deg', 'spreading_90deg', 'spreading_FSavg', \n",
     "                    'nIturbGC_FSavg', 'IturbGC_FSavg', 'dPhi01dr', \n",
     "                    'Qpar_vD', 'Qpar_vE', 'Qpar_vEn0', 'Qperp_vD', 'Qperp_vE', 'Qperp_vEn0', 'Qtot', 'Qtot_vD', 'Qtot_vE', 'Qtot_vEn0',\n",
-    "                    'Phi01']\n"
+    "                    'Phi01',\n",
+    "                    'Ptransfert', 'Ptransfert_approx', 'Ptransfert_vD', 'Ptransfert_vE', \n",
+    "                    'vorticity', 'P',\n",
+    "                    'RSphi', 'RSphi_vD', 'RSphi_vE', 'RSphi_vEn0', 'dRSphi_vDdr', 'dRSphi_vEdr', 'dRSphidr',\n",
+    "                    'RSpol_vEn0',\n",
+    "                    'Gamma_vEn0', 'Gamma_vEndiff0', \n",
+    "                    'eps']\n"
    ]
   },
   {
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -186,8 +188,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['As', 'Er', 'Gamma_vD', 'Gamma_vE', 'Gamma_vEn0', 'Gamma_vEndiff0', 'Isq', 'P', 'Phi00', 'Pperp', 'Ptransfert', 'Ptransfert_approx', 'Ptransfert_vD', 'Ptransfert_vE', 'RSphi', 'RSphi_vD', 'RSphi_vE', 'RSphi_vEn0', 'RSpol', 'RSpol_vD', 'RSpol_vE', 'RSpol_vEn0', 'T', 'VP', 'VT', 'Zs', 'dErdr', 'dErdt', 'dIdr', 'dIsqdr', 'dRSphi_vDdr', 'dRSphi_vEdr', 'dRSphidr', 'dRSpol_vDdr', 'dRSpol_vEdr', 'dRSpoldr', 'dTdr', 'dVPdr', 'dVTdr', 'dndr', 'dndt', 'eps', 'n', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'time', 'vorticity', 'title', 'c', 'ls', 'c2'])\n",
-      "Memory usage of all_sim = 293.02711486816406 MB\n"
+      "dict_keys(['As', 'Er', 'Gamma_vD', 'Gamma_vE', 'Isq', 'Phi00', 'Pperp', 'RSpol', 'RSpol_vD', 'RSpol_vE', 'T', 'VP', 'VT', 'Zs', 'dErdr', 'dErdt', 'dIdr', 'dIsqdr', 'dRSpol_vDdr', 'dRSpol_vEdr', 'dRSpoldr', 'dTdr', 'dVPdr', 'dVTdr', 'dndr', 'dndt', 'n', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'time', 'title', 'c', 'ls', 'c2'])\n",
+      "Memory usage of all_sim = 193.40602111816406 MB\n"
      ]
     }
    ],
@@ -301,22 +303,11 @@
     "    #q['neo_energy_evol_w_prefactor'] = -q['Ptransfert_w_prefactor'] + 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
     "    #q['tevol_VEsq']        = 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
     "    q['divPperp']          = np.gradient(q['Pperp'],q['rg'],axis=1)\n",
-    "    q['dtdErdrdt']         = np.gradient(np.gradient(q['Er'],q['rg'],axis=1),q['time'],axis=0)\n",
+    "    #q['dtdErdrdt']         = np.gradient(np.gradient(q['Er'],q['rg'],axis=1),q['time'],axis=0)\n",
     "    #q['Jr_diff']           = q['Jr_vE'] - q['Jr_vD']\n",
     "    #q['evol_vorticity_int']= np.gradient( \n",
     "    #    - (q['n'][0,:]* np.gradient(q['Phi00'],q['rg'],axis=1) + 0.5 * q['divPperp'])\n",
     "    #    ,q['time'],axis=0)\n",
-    "    ## To be removed after verification that there is no conflict\n",
-    "    # q['gradT']             = np.gradient(q['T'],q['rg'],axis=1)\n",
-    "    # q['Ptransfert']        = -q['dRSpoldr'] * (-q['Er'])\n",
-    "    # q['P']                 = (q['n'] * q['Er'] - 0.5 * np.gradient(q['Pperp'],q['rg'],axis=1))\n",
-    "    # q['vorticity']         = np.gradient(q['P'],q['rg'],axis=1)\n",
-    "    # q['Ptransfert_vE']     = -np.gradient(q['RSpol_vE'],q['rg'],axis=1) * (-q['Er'])\n",
-    "    # q['Ptransfert_vD']     = -np.gradient(q['RSpol_vD'],q['rg'],axis=1) * (-q['Er'])\n",
-    "    # q['Ptransfert_approx'] = q['RSpol'] * (-q['dErdr'])\n",
-    "    # q['dErdt']             = np.gradient(q['Er'],q['time'],axis=0)\n",
-    "    # q['dIsqdr']            = np.gradient(q['turb_int_sq_avg'],q['rg'],axis=1)\n",
-    "    # q['dIdr']              = np.gradient(np.sqrt(q['turb_int_sq_avg']),q['rg'],axis=1)\n",
     "\n",
     "## Estimation of the memory usage of the dictionnaries in all_sim\n",
     "mem_usage = 0\n",
@@ -367,6 +358,7 @@
     "    - [Conservation de la vorticité généralisée](#en_cours_cons_vorticity)\n",
     "    - [Conservation de la vorticité généralisée - Corrigé](#en_cours_cons_vorticity_corrected)\n",
     "    - [Estimation de l'impact de l'approximation de Pade](#en_cours_assessment_pade_approx)\n",
+    "    - [Erreur absolue entre $- \\partial_t \\left( \\frac{m n_0}{B_0} \\langle \\phi \\rangle_{FS} +  \\frac{m}{2 e B_0^2} \\langle P_\\perp \\rangle_{FS} \\right) $ et $\\partial_r J_r$](#en_cours_absolute_error_current)\n",
     "    - [Conservation de la vorticité (avec tenseur diamagnétique)](#en_cours_cons_vorticity_withdia)\n",
     "    - [Estimation de $\\nu_\\theta$](#en_cours_estimation_nutheta)\n",
     "    - [Profils amplitude GAMs et ZFs](#en_cours_profile_amplitude_GAMs_ZFs)\n",
@@ -379,10 +371,7 @@
     "    - [Profil radial de la friction néoclassique empirique (Gianakon)](#resultat_rprof_nutheta_gianakon)\n",
     "    - [Profil radial de l'intensité turbulente](#resultat_rprof_turb_int)\n",
     "    - [Profil radial de la fréquence de collision ionique](#resultat_rprof_ion_collision_freq)\n",
-    "    - [Validation de l'approximation $\\int_0^{r_0} \\langle - \\nabla \\cdot \\Pi_{r\\theta} \\rangle V_E \\approx \\int_0^{r_0} -\\langle \\Pi_{r\\theta} \\rangle \\partial_r V_E$](#resultat_validation_approx_ptransfert)\n",
-    "\n",
-    "    \n",
-    "    "
+    "    - [Validation de l'approximation $\\int_0^{r_0} \\langle - \\nabla \\cdot \\Pi_{r\\theta} \\rangle V_E \\approx \\int_0^{r_0} -\\langle \\Pi_{r\\theta} \\rangle \\partial_r V_E$](#resultat_validation_approx_ptransfert)"
    ]
   },
   {
@@ -1089,7 +1078,7 @@
     "        irholimmin = (np.abs(q['rho'] - 0.5 )).argmin()\n",
     "        irholimmax = (np.abs(q['rho'] - 1 )).argmin()\n",
     "        ax_rprof = fig.add_subplot(gs[3:, len(q_ar):]) \n",
-    "        ax_rprof.set_title(r'Profile of $\\omega = %.2e [\\omega_{c0}]$ component' % w[mode])\n",
+    "        ax_rprof.set_title(r'Profile of $\\omega = %.1e [\\omega_{c0}]$ component' % w[mode])\n",
     "        ax_rprof.semilogy(q['rho'][irholimmin:irholimmax], \n",
     "                      2*np.abs(fspectra[mode,irholimmin:irholimmax])**2 * ((itmax_avg-itmin_avg)*dt_diag), c=q['c']\n",
     "                     )\n",
@@ -1773,6 +1762,157 @@
     "         float_range_rho  = float_range_rho_slider,\n",
     "         same_y_range   = widgets.Checkbox(value=True,description='Same y range'),\n",
     "         bool_abs   = widgets.Checkbox(value=False,description='Absolute error'),\n",
+    "         **custom_widgets\n",
+    "        )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9920631a",
+   "metadata": {},
+   "source": [
+    "<a id='en_cours_absolute_error_current'></a>\n",
+    "## <font color='coral'>**Travail en cours**</font> - Erreur absolue entre $- \\partial_t \\left( \\frac{m n_0}{B_0} \\langle \\phi \\rangle_{FS} +  \\frac{m}{2 e B_0^2} \\langle P_\\perp \\rangle_{FS} \\right) $ et $\\partial_r J_r$  [▲](#sommaire)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bfae0da5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d6a532dc936741cb995603efe801f3ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=50, continuous_update=False, description='dpi_adjust', max=200, min=30),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update_plot(dpi_adjust, float_time, float_range_rho, float_range_rho2, select_sim, same_y_range)>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import skew, kurtosis\n",
+    "\n",
+    "plt.close('all')\n",
+    "\n",
+    "def update_plot(dpi_adjust,float_time,float_range_rho,float_range_rho2,select_sim,\n",
+    "                same_y_range):\n",
+    "    \n",
+    "    plt.close('all')\n",
+    "    clear_output\n",
+    "\n",
+    "    q_ar = [q for q in all_sim if q['title'] in select_sim]\n",
+    "    \n",
+    "    fig = plt.figure(figsize=(28,8*len(q_ar)))\n",
+    "\n",
+    "    tscan = float_time\n",
+    "    rhomin,rhomax = float_range_rho\n",
+    "    rhominhist,rhomaxhist = float_range_rho2\n",
+    "\n",
+    "    fig.suptitle('Time : %.0f' % (tscan) + r' $[\\omega_{c0}^{-1}]$')\n",
+    "\n",
+    "    ## Set dpi of figure\n",
+    "    if dpi_adjust!=dpi_custom:fig.set_dpi(dpi_adjust)\n",
+    "    \n",
+    "    for iq,q in enumerate(q_ar):\n",
+    "\n",
+    "        ax_rprof = fig.add_subplot(len(q_ar),3,3*iq+1)\n",
+    "\n",
+    "        irhomin, irhomax = np.searchsorted(q['rho'],[rhomin,rhomax])\n",
+    "        \n",
+    "        itscan = np.searchsorted(q['time'],tscan)\n",
+    "        \n",
+    "        B0 = 1\n",
+    "        q['P_corrected'] = -q['As'] *( (q['n'][0,:] / B0) * (np.gradient(q['Phi00'], q['rg'], axis=1)) + (2*q['Zs']*B0**2)**(-1) * np.gradient(q['Pperp'], q['rg'], axis=1) )\n",
+    "        q['vorticity_corrected'] = np.gradient(q['P_corrected'],q['rg'],axis=1)\n",
+    "\n",
+    "\n",
+    "        dt_vorticity_corrected = np.gradient(q['vorticity_corrected'],q['time'],axis=0)\n",
+    "        div_Jr       = np.gradient(q['Jr'],q['rg'],axis=1)\n",
+    "\n",
+    "        ax_rprof.set_title(q['title'] + ' - Vorticity')\n",
+    "        ax_rprof.plot(q['rho'][irhomin:irhomax], dt_vorticity_corrected[itscan,irhomin:irhomax],c='g',label=r'$\\partial_t \\langle \\Omega \\rangle$')\n",
+    "        ax_rprof.plot(q['rho'][irhomin:irhomax], -div_Jr[itscan,irhomin:irhomax],c='r',ls='-',label=r'-$ e \\partial_r \\langle \\Gamma_r \\rangle$')\n",
+    "        if same_y_range:ax_rprof.set_ylim(-4e-6,4e-6)\n",
+    "\n",
+    "        ax_rprof2 = fig.add_subplot(len(q_ar),3,3*iq+2)      \n",
+    "        ax_rprof2.set_title(q['title'] + r' - Absolute error')\n",
+    "        ax_rprof2.plot(q['rho'][irhomin:irhomax], (dt_vorticity_corrected+div_Jr)[itscan,irhomin:irhomax],c='g')\n",
+    "        if same_y_range:ax_rprof2.set_ylim(-5e-7,5e-7)\n",
+    "\n",
+    "        ax_rprof3 = fig.add_subplot(len(q_ar),3,3*iq+3)\n",
+    "        ## Plot histogram of absolute error\n",
+    "\n",
+    "        ithist = np.searchsorted(q['time'],30000)\n",
+    "        irhominhist = np.searchsorted(q['rho'],rhominhist)\n",
+    "        irhomaxhist = np.searchsorted(q['rho'],rhomaxhist)\n",
+    "\n",
+    "        error = (dt_vorticity_corrected+div_Jr)[ithist:,irhominhist:irhomaxhist].flatten()\n",
+    "        mean, std, skewness, kurt = np.mean(error), np.std(error), skew(error), kurtosis(error)\n",
+    "\n",
+    "        ax_rprof3.set_title(q['title'] + r' - Histogram')\n",
+    "        ax_rprof3.hist( error ,bins=300, label='Mean = %.1e \\nStd = %.1e \\nSkewness = %.1e \\nKurtosis = %.1e' % (mean,std,skewness,kurt), color='r', alpha=0.5, density=True,log=True)\n",
+    "\n",
+    "\n",
+    "        irhominhist2 = np.searchsorted(q['rho'],0.2)\n",
+    "        irhomaxhist2 = np.searchsorted(q['rho'],0.9)        \n",
+    "        error2 = np.hstack( ( (dt_vorticity_corrected+div_Jr)[ithist:,irhominhist2:irhominhist].flatten(), (dt_vorticity_corrected+div_Jr)[ithist:,irhomaxhist:irhomaxhist2].flatten() ) )\n",
+    "        mean2, std2, skewness2, kurt2 = np.mean(error2), np.std(error2), skew(error2), kurtosis(error2)\n",
+    "        ax_rprof3.hist( error2 ,bins=300, label='Mean = %.1e \\nStd = %.1e \\nSkewness = %.1e \\nKurtosis = %.1e' % (mean2,std2,skewness2,kurt2), color='b', alpha=0.5, density=True, log=True)\n",
+    "\n",
+    "        ax_rprof3.legend(ncol=2,fontsize=14)\n",
+    "        ax_rprof3.axvline(x=0,c='k',ls='--')\n",
+    "        ax_rprof3.text(0.05,0.6,'All time included \\nstarting '+ r'%.1e [$\\omega_{c0}^{-1}$]' % (q['time'][ithist]),transform=ax_rprof3.transAxes,fontsize=14)\n",
+    "\n",
+    "        ax_rprof2.axvline(x=q['rho'][irhominhist],c='r',lw=5,alpha=0.5)\n",
+    "        ax_rprof2.axvline(x=q['rho'][irhomaxhist],c='r',lw=5,alpha=0.5)\n",
+    "\n",
+    "        ax_rprof2.axvline(x=q['rho'][irhominhist-2],c='b',lw=5,alpha=0.5)\n",
+    "        ax_rprof2.axvline(x=q['rho'][irhomaxhist+2],c='b',lw=5,alpha=0.5)\n",
+    "        ax_rprof2.axvline(x=q['rho'][irhominhist2],c='b',lw=5,alpha=0.5)\n",
+    "        ax_rprof2.axvline(x=q['rho'][irhomaxhist2],c='b',lw=5,alpha=0.5)\n",
+    "\n",
+    "        ax_rprof2.hlines(y=mean,xmin=q['rho'][irhominhist],xmax=q['rho'][irhomaxhist],colors='r',ls='-',lw=5,alpha=0.5,zorder=10)\n",
+    "        ax_rprof2.hlines(y=[mean2,mean2],xmin=[q['rho'][irhominhist2],q['rho'][irhomaxhist]] ,xmax=[q['rho'][irhominhist],q['rho'][irhomaxhist2]]  ,colors='b',ls='-',lw=5,alpha=0.5,zorder=10)\n",
+    "\n",
+    "        for axes in [ax_rprof,ax_rprof2]:\n",
+    "            axes.set_xlabel(r'$r/a$')\n",
+    "            axes.axhline(y=0,c='k',ls='--')\n",
+    "            axes.axvline(x=1,c='k',ls='--')\n",
+    "        if iq==0:ax_rprof.legend()\n",
+    "\n",
+    "        print(mean*(irhomaxhist-irhominhist))\n",
+    "\n",
+    "    #fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
+    "    \n",
+    "float_time_slider        = widgets.FloatSlider(value=90e3, min=0, max=200e3, step=1000, description='Time range', layout=Layout(width='50%'), style = {'description_width': 'initial'}, continuous_update=False)\n",
+    "float_range_rho_slider   = widgets.FloatRangeSlider(value=[0.1, 1], min=0, max=1.2, step=0.05, description='Radial range for plot', layout=Layout(width='50%'), style = {'description_width': 'initial'}, continuous_update=False)\n",
+    "float_range_rho_slider2  = widgets.FloatRangeSlider(value=[0.6, 0.75], min=0, max=1.2, step=0.05, description='Radial range for histograms', layout=Layout(width='50%'), style = {'description_width': 'initial'}, continuous_update=False)\n",
+    "\n",
+    "coef_adjust  = widgets.FloatSlider(value=1.1, min=0.5, max=1, step=0.01, description='Coef adjust', layout=Layout(width='50%'), style = {'description_width': 'initial'}, continuous_update=False)\n",
+    "\n",
+    "interact(update_plot, \n",
+    "         float_time     = float_time_slider,\n",
+    "         float_range_rho  = float_range_rho_slider,\n",
+    "         float_range_rho2  = float_range_rho_slider2,\n",
+    "         same_y_range   = widgets.Checkbox(value=False,description='Same y range'),\n",
     "         **custom_widgets\n",
     "        )"
    ]
