--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1062381d2d3f4ad78fec4c90c8daec36",
+       "model_id": "b0c6573059c845f188bfe98c00b24056",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "202f286659d3489a939977856398c7b6",
+       "model_id": "a66a5c9df3e0426ebe68f44cbc1a715f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86377d63ce7a4fc8bac8282d22456278",
+       "model_id": "33d0ee0ac8c64aeb81bd066dcbdf68f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f76d7748109f41adb0540968181f31b2",
+       "model_id": "10f5946202fb4a7ba6ade35b0753c653",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,7 +125,7 @@
     "\n",
     "#Size of figures\n",
     "dpi_laptop = 50; dpi_cadarache = 65; dpi_home = 100\n",
-    "dpi_custom = dpi_laptop\n",
+    "dpi_custom = dpi_home\n",
     "\n",
     "## Set colors\n",
     "import seaborn as sns\n",
@@ -143,9 +143,9 @@
     "wished_values = ['As', 'Zs', \n",
     "                 'Gamma_vD', 'Gamma_vE',\n",
     "                 'Isq', 'dIsqdr',\n",
-    "                 'n','T', 'Pperp',\n",
+    "                 'ns0','Ts0','n','T', 'Pperp',\n",
     "                 'RSpol', 'RSpol_vD', 'RSpol_vE'\n",
-    "                 'VP', 'VT', 'Phi00', 'Er',\n",
+    "                 'VP', 'VT', 'Phi00', 'PhiFSavg', 'Er', 'Er_00',\n",
     "                 'nu_i', 'nustar', 'vorticity', 'P',\n",
     "                 'rho', 'time', 'q', 'rg']\n",
     "\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -190,8 +190,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['As', 'Er', 'Gamma_vD', 'Gamma_vE', 'Isq', 'P', 'Phi00', 'Pperp', 'RSpol', 'RSpol_vD', 'T', 'VT', 'Zs', 'dIsqdr', 'n', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'time', 'vorticity', 'title', 'c', 'ls', 'c2'])\n",
-      "Memory usage of all_sim = 105.51539611816406 MB\n"
+      "(649, 512)\n",
+      "(649, 512)\n",
+      "(649,)\n",
+      "dict_keys(['As', 'Er', 'Er_00', 'Gamma_vD', 'Gamma_vE', 'Isq', 'Phi00', 'PhiFSavg', 'Pperp', 'RSpol_vD', 'T', 'Ts0', 'VT', 'Zs', 'n', 'ns0', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'time', 'title', 'c', 'ls', 'c2', 'RSdia', 'RSpol_vE_from3D', 'RSpol_tot_from3D', 'dRSpol_tot_from3Ddr'])\n",
+      "Memory usage of all_sim = 133.45592498779297 MB\n"
      ]
     }
    ],
@@ -208,6 +211,18 @@
     "            return np.gradient(self[key[2:]], self['rg'], axis=1)\n",
     "        if key[:2] == 'dt':\n",
     "            return np.gradient(self[key[2:]], self['time'], axis=0)\n",
+    "        if key == 'P':\n",
+    "            return self['As'] * (- self['ns0'] * self['Er'] + 0.5 * self['Zs']**(-1) * self['drPperp'])\n",
+    "        if key == 'vorticity':\n",
+    "            return self['drP']\n",
+    "        if key == 'Ptransfert':\n",
+    "            return self['drRSpol_vE'] * (-self['Er'])\n",
+    "        if key == 'Ptransfert_approx':\n",
+    "            return self['RSpol_vE'] * (-self['drEr'])\n",
+    "        if key == 'Jr':\n",
+    "            return self['As']*(self['Gamma_vE'] + self['Gamma_vD'])\n",
+    "        #q['Ptransfert_w_prefactor']  = -q['dRSpoldr'] * (-q['Er']) / (1 + 2 * q['q']**2)\n",
+    "        #q['Ptransfert_withdia']      = -q['dRSpol_tot_from3Ddr'] * (-q['Er'])\n",
     "        else:\n",
     "            return super().__getitem__(key)\n",
     "\n",
@@ -216,7 +231,7 @@
     "    with h5py.File(filename, 'r') as f:\n",
     "        d = {}\n",
     "        for k in f.keys():\n",
-    "            #if k in wished_values:\n",
+    "            if k in wished_values:\n",
     "                v = f[k][()]\n",
     "                if isinstance(v, bytes):\n",
     "                    d[k] = v.decode('utf-8')\n",
@@ -306,24 +321,6 @@
     "                        q[p] = q[p][:-1,:]\n",
     "        q['time'] = q['time'][:-1]\n",
     "    \n",
-    "## Defining custom values\n",
-    "for iq,q in enumerate(all_sim):\n",
-    "    #q['Ptransfert_w_prefactor']  = -q['dRSpoldr'] * (-q['Er']) / (1 + 2 * q['q']**2)\n",
-    "    #q['Ptransfert_withdia']      = -q['dRSpol_tot_from3Ddr'] * (-q['Er'])\n",
-    "    q['Jr']                = (q['Gamma_vE']+q['Gamma_vD'])\n",
-    "    #q['Jr_vD']             = q['Gamma_vD']\n",
-    "    #q['Jr_vE']             = q['Gamma_vE']\n",
-    "    #q['divJr']              = np.gradient(q['Jr'],q['rg'],axis=1)\n",
-    "    #q['neo_energy_evol']   = -q['Ptransfert'] + 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
-    "    #q['neo_energy_evol_w_prefactor'] = -q['Ptransfert_w_prefactor'] + 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
-    "    #q['tevol_VEsq']        = 0.5*np.gradient(-q['Er']**2,q['time'],axis=0)\n",
-    "    #q['divPperp']          = np.gradient(q['Pperp'],q['rg'],axis=1)\n",
-    "    #q['dtdErdrdt']         = np.gradient(np.gradient(q['Er'],q['rg'],axis=1),q['time'],axis=0)\n",
-    "    #q['Jr_diff']           = q['Jr_vE'] - q['Jr_vD']\n",
-    "    #q['evol_vorticity_int']= np.gradient( \n",
-    "    #    - (q['n'][0,:]* np.gradient(q['Phi00'],q['rg'],axis=1) + 0.5 * q['divPperp'])\n",
-    "    #    ,q['time'],axis=0)\n",
-    "\n",
     "## Estimation of the memory usage of the dictionnaries in all_sim\n",
     "mem_usage = 0\n",
     "for q in all_sim:\n",
@@ -401,14 +398,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "280898b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc4e94844fe94387b49cc7ddf5de1c1d",
+       "model_id": "ff9f41ffd45a4c17b76ef02861351c50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -422,7 +419,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c92e313116a4d54939de972aaca92e8",
+       "model_id": "881fd01c33a843c594e56a4b0bb10910",
        "version_major": 2,
        "version_minor": 0
       },
@@ -439,7 +436,7 @@
        "<function __main__.update_plot(N, param, param2, float_range_time, select_sim, dpi_adjust)>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
