--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -35,7 +35,78 @@
     "outputId": "0b790d25-e7f8-42a8-c67a-567dbb7c92c8",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a5854ce9b6a41889b02caa87862b249",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Original simulation', layout=Layout(width='50%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d036e74f882b4a77b7f1e64cec5c962d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Neoclassical simulation', layout=Layout(width='50%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f66bf3f793964f6a95382f2439f3dc08",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='First phase of new simulation', layout=Layout(width='50%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "54a611c087174fb5b727eb5db2d2b83a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=True, description='Second phase of new simulation', layout=Layout(width='50%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e7c9098cef5943edbf59ad331f521b3f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=True, description='Test - Aligned coordinate with 7 points for gyroavg', layout=Layout(width='5…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%reset -f\n",
     "import ipywidgets as widgets\n",
@@ -114,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -129,8 +200,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['As', 'Er', 'Er_00', 'Gamma_vD', 'Gamma_vE', 'Isq', 'Phi00', 'PhiFSavg', 'Pperp', 'RSpol_vD', 'RSpol_vE', 'T', 'Ts0', 'VP', 'VT', 'Zs', 'n', 'ns0', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'time', 'title', 'c', 'c2', 'ls'])\n",
-      "Memory usage of all_sim = 51.877464294433594 MB\n"
+      "dict_keys(['As', 'Er', 'Er_00', 'Gamma_vD', 'Gamma_vE', 'Isq', 'Phi00', 'PhiFSavg', 'Pperp', 'RSpol_vD', 'RSpol_vE', 'T', 'Ts0', 'VP', 'VT', 'Zs', 'n', 'ns0', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'time', 'title', 'c', 'c2', 'RSdia', 'RSpol_vE_from3D', 'RSpol_tot_from3D'])\n",
+      "Memory usage of all_sim = 140.86608123779297 MB\n"
      ]
     }
    ],
@@ -284,10 +355,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "280898b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3aecb6f4f4a843d0a3a1a150bec69370",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a2b6b08e440b463f8e7d61955d350f37",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=1, continuous_update=False, description='N', min=1), Text(value='Er', co…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update_plot(N, param, param2, float_range_time, select_sim, dpi_adjust)>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plt.close('all')\n",
     "clear_output\n",
@@ -322,11 +432,11 @@
     "\n",
     "        p_ma = uniform_filter1d(uniform_filter1d(q[param],size=N,axis=1),size=N,axis=1)\n",
     "\n",
-    "        ax_rprof.plot(q['rho'][irhomin:irhomax], np.mean( p_ma[itmin_avg:itmax_avg,irhomin:irhomax],axis=0),ls=q['ls'],c=q['c'],label=q['title'])\n",
+    "        ax_rprof.plot(q['rho'][irhomin:irhomax], np.mean( p_ma[itmin_avg:itmax_avg,irhomin:irhomax],axis=0),c=q['c'],label=q['title'])\n",
     "        \n",
     "        if param2:\n",
     "            p_ma2 = uniform_filter1d(uniform_filter1d(q[param2],size=N,axis=1),size=N,axis=1)\n",
-    "            ax_rprof2.plot(q['rho'][irhomin:irhomax], np.mean( p_ma2[itmin_avg:itmax_avg,irhomin:irhomax],axis=0),ls=q['ls'],c=q['c2'],label=q['title'])\n",
+    "            ax_rprof2.plot(q['rho'][irhomin:irhomax], np.mean( p_ma2[itmin_avg:itmax_avg,irhomin:irhomax],axis=0),c=q['c2'],label=q['title'])\n",
     "        \n",
     "    ## Axes customizations\n",
     "    ax_rprof.set_xlabel(r'$r/a$')\n",
@@ -404,11 +514,11 @@
     "\n",
     "        p_ma = uniform_filter1d(uniform_filter1d(q[param],size=N,axis=1),size=N,axis=1)\n",
     "\n",
-    "        ax_tevol.plot(q['time'][itmin_avg:itmax_avg], np.mean( p_ma[itmin_avg:itmax_avg,irhomin:irhomax],axis=1),ls=q['ls'],c=q['c'],label=q['title'])\n",
+    "        ax_tevol.plot(q['time'][itmin_avg:itmax_avg], np.mean( p_ma[itmin_avg:itmax_avg,irhomin:irhomax],axis=1),c=q['c'],label=q['title'])\n",
     "        \n",
     "        if param2:\n",
     "            p_ma2 = uniform_filter1d(uniform_filter1d(q[param2],size=N,axis=1),size=N,axis=1)\n",
-    "            ax_tevol2.plot(q['time'][itmin_avg:itmax_avg], np.mean( p_ma2[itmin_avg:itmax_avg,irhomin:irhomax],axis=1),ls=q['ls'],c=q['c2'],label=q['title'])\n",
+    "            ax_tevol2.plot(q['time'][itmin_avg:itmax_avg], np.mean( p_ma2[itmin_avg:itmax_avg,irhomin:irhomax],axis=1),c=q['c2'],label=q['title'])\n",
     "        \n",
     "    ## Axes customizations\n",
     "    ax_tevol.set_xlabel(r'$t[\\omega_{c0}^{-1}]$')\n",
@@ -487,7 +597,7 @@
     "\n",
     "        ## Plot radial profile\n",
     "        ax_rprof.set_title(r'Radial profile (at t= %.0f $[\\omega_{c0}^{-1}]$)' % (q['time'][it_play]) )\n",
-    "        ax_rprof.plot(q['rho'][irhomin:irhomax], p_ma[it_play,irhomin:irhomax],ls=q['ls'],c=q['c'],label=q['title'])\n",
+    "        ax_rprof.plot(q['rho'][irhomin:irhomax], p_ma[it_play,irhomin:irhomax],c=q['c'],label=q['title'])\n",
     "        ax_rprof.plot(q['rho'][10:10+N],np.ones(N)*ax_rprof.get_ylim()[1]/4,c='xkcd:battleship grey',lw=5) #Visualize the sliding average window\n",
     "\n",
     "    ## Plot reference lines\n",
@@ -621,14 +731,14 @@
     "        itmin_avg, itmax_avg = np.searchsorted(q['time'],[tmin_avg,tmax_avg])\n",
     "\n",
     "        ax_rprof.set_title(r'Radial profile (avg %.0f < t$[\\omega_{c0}^{-1}]$ < %.0f)' % (tmin_avg , tmax_avg) )\n",
-    "        ax_rprof.plot(q['rho'][irhomin:irhomax], np.mean( p_ma[itmin_avg:itmax_avg,irhomin:irhomax],axis=0),ls=q['ls'],c=q['c'],label=q['title'])\n",
+    "        ax_rprof.plot(q['rho'][irhomin:irhomax], np.mean( p_ma[itmin_avg:itmax_avg,irhomin:irhomax],axis=0),c=q['c'],label=q['title'])\n",
     "        ax_rprof.set_xlabel(r'$r/a$')\n",
     "\n",
     "        irhomin_avg, irhomax_avg = np.searchsorted(q['rho'],[rhomin_avg,rhomax_avg])\n",
     "\n",
     "        \n",
     "        ax_tevol.set_title(r'Temporal evolution (avg %.2f < r/a < %.2f)' % (rhomin_avg , rhomax_avg) )\n",
-    "        ax_tevol.plot(q['time'][itmin:itmax], np.mean(p_ma[itmin:itmax,irhomin_avg:irhomax_avg],axis=1),ls=q['ls'],c=q['c'],label=q['title'])\n",
+    "        ax_tevol.plot(q['time'][itmin:itmax], np.mean(p_ma[itmin:itmax,irhomin_avg:irhomax_avg],axis=1),c=q['c'],label=q['title'])\n",
     "        ax_tevol.set_xlabel(r'Time $[\\omega_{c0}^{-1}]$')\n",
     "    \n",
     "    for axes in [ax_rprof,ax_tevol]: \n",
