--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a5854ce9b6a41889b02caa87862b249",
+       "model_id": "b0a356b5dfe142f8ac11e6096a6a7106",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d036e74f882b4a77b7f1e64cec5c962d",
+       "model_id": "7d182af92de34f0a8196f694fc719534",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f66bf3f793964f6a95382f2439f3dc08",
+       "model_id": "6b4014bb0536488ea297a63be6b95d9e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54a611c087174fb5b727eb5db2d2b83a",
+       "model_id": "ad1baccc401f4cd3ab7452be1bd41a0c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,7 +95,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7c9098cef5943edbf59ad331f521b3f",
+       "model_id": "e885a6e207664cb18391642683ea6e22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -195,16 +195,7 @@
     "outputId": "f20c6730-029a-4833-d1d5-489ce50325c4",
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['As', 'Er', 'Er_00', 'Gamma_vD', 'Gamma_vE', 'Isq', 'Phi00', 'PhiFSavg', 'Pperp', 'RSpol_vD', 'RSpol_vE', 'T', 'Ts0', 'VP', 'VT', 'Zs', 'n', 'ns0', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'time', 'title', 'c', 'c2', 'RSdia', 'RSpol_vE_from3D', 'RSpol_tot_from3D'])\n",
-      "Memory usage of all_sim = 140.86608123779297 MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class mydict(dict):\n",
     "    def __init__(self, *args, **kwargs):\n",
@@ -253,7 +244,8 @@
     "    qprof_05_br  = hdf5_to_dict('data/TS45511_q05_br.hdf5') ; qprof_05_br['title'] =r'$q_{ref}^{BR} \\times 0.5$' ; qprof_05_br['c']  = sns.color_palette(palette[0])[0]; qprof_05_br['c2']  = sns.color_palette(palette[3])[0]\n",
     "    qprof_075_br = hdf5_to_dict('data/TS45511_q075_br.hdf5'); qprof_075_br['title']=r'$q_{ref}^{BR} \\times 0.75$'; qprof_075_br['c'] = sns.color_palette(palette[0])[1]; qprof_075_br['c2'] = sns.color_palette(palette[3])[1]\n",
     "    qprof_15_br  = hdf5_to_dict('data/TS45511_q15_br.hdf5') ; qprof_15_br['title'] =r'$q_{ref}^{BR} \\times 1.5$' ; qprof_15_br['c']  = sns.color_palette(palette[0])[3]; qprof_15_br['c2']  = sns.color_palette(palette[3])[3]\n",
-    "    all_sim.extend([qprof_05_br,qprof_075_br,qprof_15_br])\n",
+    "    qprof_05_alignedGC7  = hdf5_to_dict('data/TS45511_q05_aligned_GC7.hdf5') ; qprof_05_alignedGC7['title'] = r'$q_{ref}^{align} \\times 0.5$' ; qprof_05_alignedGC7['c']='xkcd:green' ; qprof_05_alignedGC7['c2']='xkcd:lime'  ; qprof_05_alignedGC7['ls']='-'\n",
+    "    all_sim.extend([qprof_05_br,qprof_075_br,qprof_15_br,qprof_05_alignedGC7])\n",
     "\n",
     "# Redo of first simulations with better time resolution - 2nd phase\n",
     "if secondphase_newsim.value:\n",
@@ -269,8 +261,9 @@
     "if test_aligned_GC7.value:\n",
     "    qprof_05_br          = hdf5_to_dict('data/TS45511_q05_br.hdf5')          ; qprof_05_br['title']         = r'$q_{ref}^{BR} \\times 0.5$'    ; qprof_05_br['c']='xkcd:blue'          ; qprof_05_br['c2']='xkcd:azure'         ; qprof_05_br['ls']='-'\n",
     "    qprof_05_alignedGC7  = hdf5_to_dict('data/TS45511_q05_aligned_GC7.hdf5') ; qprof_05_alignedGC7['title'] = r'$q_{ref}^{align} \\times 0.5$' ; qprof_05_alignedGC7['c']='xkcd:green' ; qprof_05_alignedGC7['c2']='xkcd:lime'  ; qprof_05_alignedGC7['ls']='-'\n",
+    "    qprof_05_GC7         = hdf5_to_dict('data/TS45511_q05_GC7.hdf5')         ; qprof_05_GC7['title']        = r'$q_{ref}^{GC7} \\times 0.5$'   ; qprof_05_GC7['c']='xkcd:red'          ; qprof_05_GC7['c2']='xkcd:light red'    ; qprof_05_GC7['ls']='-'\n",
     "    qprof_05_n0          = hdf5_to_dict('data/TS45511_q05_n0.hdf5')          ; qprof_05_n0['title']         = r'$q_{ref} \\times 0.5$ - $n=0$' ; qprof_05_n0['c']='xkcd:bright orange' ; qprof_05_n0['c2']='xkcd:vermillion'    ; qprof_05_n0['ls']='-'\n",
-    "    all_sim.extend([qprof_05_br,qprof_05_alignedGC7,qprof_05_n0])\n",
+    "    all_sim.extend([qprof_05_br,qprof_05_alignedGC7,qprof_05_n0,qprof_05_GC7])\n",
     "\n",
     "print(all_sim[0].keys())\n",
     "\n",
@@ -355,49 +348,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "280898b8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3aecb6f4f4a843d0a3a1a150bec69370",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2b6b08e440b463f8e7d61955d350f37",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=1, continuous_update=False, description='N', min=1), Text(value='Er', co…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.update_plot(N, param, param2, float_range_time, select_sim, dpi_adjust)>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.close('all')\n",
     "clear_output\n",
@@ -2847,7 +2801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
