--- a/Scan_Ip_2D_spectra.ipynb
+++ b/Scan_Ip_2D_spectra.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,65 +88,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "E:\\Temp\\ipykernel_12428\\1928060473.py:33: RuntimeWarning: invalid value encountered in true_divide\n",
+      "E:\\Temp\\ipykernel_5936\\1795303237.py:33: RuntimeWarning: invalid value encountered in true_divide\n",
       "  Gammalin2D = np.log(self['TFPhi2D'][itend,:,:]/self['TFPhi2D'][itinit,:,:])/(tend-tinit)\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f6a2d16db714afcaeec92ad4010b6fa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "qrpeak = 2.87\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E:\\Temp\\ipykernel_12428\\1928060473.py:79: RuntimeWarning: divide by zero encountered in log10\n",
-      "  p1 = ax1.pcolormesh(m2d,n2d,np.log10(tevol_TFPhi2D[-30,:,:]),vmin=-10,vmax=0)\n",
-      "E:\\Temp\\ipykernel_12428\\1928060473.py:79: MatplotlibDeprecationWarning: shading='flat' when X and Y have the same dimensions as C is deprecated since 3.3.  Either specify the corners of the quadrilaterals with X and Y, or pass shading='auto', 'nearest' or 'gouraud', or set rcParams['pcolor.shading'].  This will become an error two minor releases later.\n",
-      "  p1 = ax1.pcolormesh(m2d,n2d,np.log10(tevol_TFPhi2D[-30,:,:]),vmin=-10,vmax=0)\n",
-      "E:\\Temp\\ipykernel_12428\\1928060473.py:96: MatplotlibDeprecationWarning: shading='flat' when X and Y have the same dimensions as C is deprecated since 3.3.  Either specify the corners of the quadrilaterals with X and Y, or pass shading='auto', 'nearest' or 'gouraud', or set rcParams['pcolor.shading'].  This will become an error two minor releases later.\n",
-      "  p3 = ax3.pcolormesh(m2d,n2d,Gammalin2D[:,:],vmin=0)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d72301d2fc0343d3b5e8eb64da1f706d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E:\\Temp\\ipykernel_12428\\1928060473.py:79: MatplotlibDeprecationWarning: shading='flat' when X and Y have the same dimensions as C is deprecated since 3.3.  Either specify the corners of the quadrilaterals with X and Y, or pass shading='auto', 'nearest' or 'gouraud', or set rcParams['pcolor.shading'].  This will become an error two minor releases later.\n",
-      "  p1 = ax1.pcolormesh(m2d,n2d,np.log10(tevol_TFPhi2D[-30,:,:]),vmin=-10,vmax=0)\n",
-      "E:\\Temp\\ipykernel_12428\\1928060473.py:96: MatplotlibDeprecationWarning: shading='flat' when X and Y have the same dimensions as C is deprecated since 3.3.  Either specify the corners of the quadrilaterals with X and Y, or pass shading='auto', 'nearest' or 'gouraud', or set rcParams['pcolor.shading'].  This will become an error two minor releases later.\n",
-      "  p3 = ax3.pcolormesh(m2d,n2d,Gammalin2D[:,:],vmin=0)\n"
+     "ename": "NameError",
+     "evalue": "name 'dn2d' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 69\u001b[0m\n\u001b[0;32m     66\u001b[0m Gammalin2D \u001b[39m=\u001b[39m q\u001b[39m.\u001b[39mestimate_GRlin2D(tinit,tend)\n\u001b[0;32m     68\u001b[0m C \u001b[39m=\u001b[39m \u001b[39m140\u001b[39m\n\u001b[1;32m---> 69\u001b[0m n_ex \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margmin(np\u001b[39m.\u001b[39mabs(n2d\u001b[39m-\u001b[39mdn2d\u001b[39m-\u001b[39mC))\n\u001b[0;32m     70\u001b[0m m_ex \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margmin(np\u001b[39m.\u001b[39mabs(m2d\u001b[39m-\u001b[39mdm2d\u001b[39m+\u001b[39mC\u001b[39m*\u001b[39mq[\u001b[39m'\u001b[39m\u001b[39mq_rpeak\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[0;32m     72\u001b[0m fig \u001b[39m=\u001b[39m plt\u001b[39m.\u001b[39mfigure(figsize\u001b[39m=\u001b[39m(\u001b[39m18\u001b[39m,\u001b[39m6\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dn2d' is not defined"
      ]
     }
    ],
@@ -162,7 +116,7 @@
     "        self['Phithphisq'] = self['Phithphi']**2\n",
     "\n",
     "        ## Evolution of mn spectra\n",
-    "        tevol_TFPhi2D = np.zeros((len(q['time']),self['Nphi'],self['Ntheta']))\n",
+    "        tevol_TFPhi2D = np.zeros((len(self['time']),self['Nphi'],self['Ntheta']))\n",
     "        for it in range(len(self['time'])):\n",
     "            tevol_TFPhi2D[it,:,:] = np.abs(Fourier2D(self['Phithphisq'][it,0:self['Nphi']+1,0:self['Ntheta']+1],self['phig'],self['thetag'])[0])\n",
     "        self['TFPhi2D'] = tevol_TFPhi2D\n",
@@ -188,7 +142,7 @@
     "\n",
     "## end of mydict2\n",
     "\n",
-    "def hdf5_to_dict2(filename):\n",
+    "def hdf5_to_dict2(filename, cls=mydict2):\n",
     "    import h5py\n",
     "    \"\"\"Load a dictionary of arrays and strings as unicode characters from an HDF5 file.\"\"\"\n",
     "    with h5py.File(filename, 'r') as f:\n",
@@ -199,10 +153,10 @@
     "                d[k] = v.decode('utf-8')\n",
     "            else:\n",
     "                d[k] = np.array(v)\n",
-    "    return mydict2(d)\n",
+    "    return cls(d)\n",
     "\n",
-    "q05_spectra = hdf5_to_dict2(\"data/q05_growthrate_2Dspectra.hdf5\")\n",
-    "q15_spectra = hdf5_to_dict2(\"data/q15_growthrate_2Dspectra.hdf5\")\n",
+    "q05_spectra = hdf5_to_dict(\"data/q05_growthrate_2Dspectra.hdf5\",cls=mydict2)\n",
+    "q15_spectra = hdf5_to_dict(\"data/q15_growthrate_2Dspectra.hdf5\",cls=mydict2)\n",
     "\n",
     "for iq,q in enumerate([q05_spectra,q15_spectra]):\n",
     "    print('qrpeak = %.2f' % q['q_rpeak'])\n",
